--- a/Anchor.toml
+++ b/Anchor.toml
@@ -12,6 +12,7 @@ shenqi_box = "2ZgjDLphMVoLT48YCk2ZvAsHpdwkqtkhyCWsjR1Gda7x"
 [programs.localnet]
 metaplex_nft = "HNyPqG6w1NQTx4gEB4eHGFJNDMQQJibc8LQwJqJ5awoo"
 shenqi_box = "2ZgjDLphMVoLT48YCk2ZvAsHpdwkqtkhyCWsjR1Gda7x"
+token_2022_nft = "2PLQsLqv33ZAtLh4WA7BCnnXTNsrZEY3QBxhVDx8JZTe"
 
 [programs.mainnet]
 metaplex_nft = "HNyPqG6w1NQTx4gEB4eHGFJNDMQQJibc8LQwJqJ5awoo"
