--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   },
   "devDependencies": {
     "@solana/kit": "^2.3.0",
+    "@solana/spl-token-metadata": "^0.1.6",
     "@types/bn.js": "^5.1.0",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.0.0",
-    "chai": "5.2.1",
+    "chai": "4.3.10",
     "mocha": "^9.0.3",
     "mochawesome": "^7.1.3",
     "prettier": "3.6.2",
