--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,7 +42,7 @@ repos:
         language: rust
         types: [text]
         entry: typos --config .typos.toml
-        exclude: '(\.lock$|scripts/run_full_test\.ts$|output\.jsonl$|mochawesome-report/.*)'
+        exclude: '(\.lock$|scripts/run_full_test\.ts$|output\.jsonl$|mochawesome-report/.*|docs/.*|)'
       # 检查 Rust 代码中的潜在问题
       - id: cargo-clippy
         name: Lint with Clippy
