--- a/.typos.toml
+++ b/.typos.toml
@@ -6,6 +6,7 @@ extend-exclude = [
   "**/output.jsonl",
   "**/mochawesome-report/**",
   "mochawesome-report/**",
+  "docs/**",
 ]
 ignore-dot = true
 ignore-files = true
