--- a/package.json
+++ b/package.json
@@ -6,18 +6,32 @@
   },
   "type": "module",
   "dependencies": {
+    "@codama/nodes-from-anchor": "^1.2.5",
+    "@codama/renderers": "^1.0.31",
+    "@codama/renderers-js": "^1.3.4",
+    "@codama/renderers-rust": "^1.2.2",
     "@coral-xyz/anchor": "^0.31.1",
     "@metaplex-foundation/mpl-token-metadata": "^3.4.0",
     "@metaplex-foundation/umi": "^1.2.0",
     "@metaplex-foundation/umi-bundle-defaults": "^1.2.0",
     "@metaplex-foundation/umi-signer-wallet-adapters": "^1.2.0",
+    "@solana/rpc-transport-http": "^3.0.1",
     "@solana/spl-token": "^0.4.13",
-    "codama": "^1.3.1",
+    "codama": "1.3.3",
+    "dotenv": "^17.2.1",
     "tsx": "^4.20.3"
   },
   "devDependencies": {
+    "@solana/addresses": "^3.0.1",
+    "@solana/codecs-strings": "^3.0.1",
+    "@solana/instructions": "^3.0.1",
+    "@solana/keys": "^3.0.1",
     "@solana/kit": "^2.3.0",
+    "@solana/rpc": "^3.0.1",
+    "@solana/rpc-types": "^3.0.1",
+    "@solana/signers": "^3.0.1",
     "@solana/spl-token-metadata": "^0.1.6",
+    "@solana/transactions": "^3.0.1",
     "@types/bn.js": "^5.1.0",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.0.0",
@@ -25,7 +39,8 @@
     "mocha": "^9.0.3",
     "mochawesome": "^7.1.3",
     "prettier": "3.6.2",
-    "ts-mocha": "^10.0.0",
+    "ts-mocha": "11.1.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   }
 }
